feat(discovery, chore): add swagger schemas to discovery server endpoints
