# discovery/api/chore/schema.go
@@ -1,0 +1,5 @@
+package chore
+
+type healthzResponseSchema struct {
+	Message string `json:"message"`
+}
